syntax = "proto3";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  string json_name = 50001;
}

package identity_verification;

option go_package = "pkg/pb";

service VerificationService {
    rpc VerifyNIN(VerifyNINRequest) returns (VerifyNINResponse);
    rpc VerifyVNIN(VerifyNINRequest) returns (VerifyNINResponse);
    rpc VerifyDL(VerifyDLRequest) returns (VerifyDLResponse);
    rpc VerifyPassport(VerifyPassportRequest) returns (VerifyPassportResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

// VerifyNINRequest is the request message for verifying NIN
message VerifyNINRequest {
    string idNumber = 1;
    string firstname = 2;
    string lastname = 3;
    string middlename = 4;
    string dob = 5;
    string phone = 6;
    string email = 7;
    string gender = 8;
}

// Reused message types with unique names
message ApplicantNIN {
    string Firstname = 1 [ (json_name) = "firstname"];
    string Lastname = 2 [ (json_name) = "lastname"];
}

message FieldMatchesNIN {
    bool Firstname = 1 [ (json_name) = "firstname"];
    bool Lastname = 2 [ (json_name) = "lastname"];
}

message NinCheck {
    string Status = 1 [ (json_name) = "status"];
    FieldMatchesNIN FieldMatches = 2 [ (json_name) = "fieldMatches"];
}

message SummaryNIN {
    NinCheck NinCheck = 1 [ (json_name) = "nin_check"];
}

message StatusNIN {
    string State = 1  [ (json_name) = "state"];
    string Status = 2  [ (json_name) = "status"];
}

message Nin {
    string Nin = 1 [ (json_name) = "nin"];
    string Firstname = 2 [ (json_name) = "firstname"];
    string Lastname = 3 [ (json_name) = "lastname"];
    string Middlename = 4 [ (json_name) = "middlename"];
    string Phone = 5 [ (json_name) = "phone"];
    string Gender = 6 [ (json_name) = "gender"];
    string Birthdate = 7 [ (json_name) = "birthdate"];
    string Photo = 8 [ (json_name) = "photo"];
    string Address = 9 [ (json_name) = "address"];
}

// VerifyNINResponse is the response message for verifying NIN
message VerifyNINResponse {
    int32 Id = 1 [ (json_name) = "id"];
    ApplicantNIN Applicant = 2 [ (json_name) = "applicant"];
    SummaryNIN Summary = 3 [ (json_name) = "summary"];
    StatusNIN Status = 4 [ (json_name) = "status"];
    Nin Nin = 5 [ (json_name) = "nin"];
}

message LoginRequest {
    string client_id = 1;
    string secret_key = 2;
}

message LoginResponse {
    string token = 1;
}

message VerifyDLRequest {
    string idNumber = 1;
    string firstname = 2;
    string lastname = 3;
    string middlename = 4;
    string dob = 5;
    string phone = 6;
    string email = 7;
    string gender = 8;
}

message ApplicantDL {
    string Firstname = 1 [ (json_name) = "firstname"];
    string Lastname = 2 [ (json_name) = "lastname"];
}

message FieldMatchesDL {
    bool Firstname = 1 [ (json_name) = "firstname"];
    bool Lastname = 2 [ (json_name) = "lastname"];
}

message DriversLicenseCheck {
    string Status = 1 [ (json_name) = "status"];
    FieldMatchesDL FieldMatches = 2 [ (json_name) = "fieldMatches"];
}

message SummaryDL {
    DriversLicenseCheck DriversLicenseCheck = 1 [ (json_name) = "drivers_license_check"];
}

message StatusDL {
    string State = 1 [ (json_name) = "state"];
    string Status = 2 [ (json_name) = "status"];
}

message DriversLicense {
    string DriversLicense = 1 [ (json_name) = "drivers_license"];
    string Firstname = 2 [ (json_name) = "firstname"];
    string Lastname = 3 [ (json_name) = "lastname"];
    string Middlename = 4 [ (json_name) = "middlename"];
    string Birthdate = 5 [ (json_name) = "birthdate"];
    string Photo = 6 [ (json_name) = "photo"];
    string IssuedDate = 7 [ (json_name) = "issued_date"];
    string ExpiryDate = 8 [ (json_name) = "expiry_date"];
    string StateOfIssue = 9 [ (json_name) = "state_of_issue"];
}

message VerifyDLResponse {
    int32 Id = 1 [ (json_name) = "id"];
    ApplicantDL Applicant = 2 [ (json_name) = "applicant"];
    SummaryDL Summary = 3 [ (json_name) = "summary"];
    StatusDL Status = 4 [ (json_name) = "status"];
    DriversLicense DriversLicense = 5 [ (json_name) = "drivers_license"];
}

message VerifyPassportRequest {
    string idNumber = 1;
    string firstname = 2;
    string lastname = 3;
    string middlename = 4;
    string dob = 5;
    string phone = 6;
    string email = 7;
    string gender = 8;
}

message ApplicantPassport {
    string Firstname = 1 [ (json_name) = "firstname"];
    string Lastname = 2 [ (json_name) = "lastname"];
}

message FieldMatchesPassport {
    bool Firstname = 1 [ (json_name) = "firstname"];
    bool Lastname = 2 [ (json_name) = "lastname"];
}

message PassportCheck {
    string Status = 1 [ (json_name) = "status"];
    FieldMatchesPassport FieldMatches = 2 [ (json_name) = "fieldMatches"];
}

message SummaryPassport {
    PassportCheck PassportCheck = 1 [ (json_name) = "passport_check"];
}

message StatusPassport {
    string State = 1 [ (json_name) = "state"];
    string Status = 2 [ (json_name) = "status"];
}

message Passport {
    string PassportNo = 1 [ (json_name) = "passport_no"];
    string Firstname = 2 [ (json_name) = "firstname"];
    string Lastname = 3 [ (json_name) = "lastname"];
    string Middlename = 4 [ (json_name) = "middlename"];
    string Birthdate = 5 [ (json_name) = "birthdate"];
    string Photo = 6 [ (json_name) = "photo"];
    string Gender = 7 [ (json_name) = "gender"];
    string IssuedAt = 8 [ (json_name) = "issued_at"];
    string IssuedDate = 9 [ (json_name) = "issued_date"];
    string ExpiryDate = 10 [ (json_name) = "expiry_date"];
}

message VerifyPassportResponse {
    int32 Id = 1 [ (json_name) = "id"];
    ApplicantPassport Applicant = 2 [ (json_name) = "applicant"];
    SummaryPassport Summary = 3 [ (json_name) = "summary"];
    StatusPassport Status = 4 [ (json_name) = "status"];
    Passport Passport = 5 [ (json_name) = "passport"];
}
